--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,57 @@
 {
-    "name": "vendor_slug/package_slug",
+    "name": "seatplus/telegram-channel",
     "description": ":package_description",
     "keywords": [
         ":vendor_name",
         "laravel",
         "package_slug"
     ],
-    "homepage": "https://github.com/vendor_slug/package_slug",
+    "homepage": "https://github.com/seatplus/telegram-channel",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Felix Huber",
+            "email": "felix.a.huber@gmx.net",
             "role": "Developer"
         }
     ],
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../notifications"
+    }
+  ],
     "require": {
         "php": "^8.0",
-        "seatplus/core": "^0.3",
         "illuminate/contracts": "^8.37",
-      "seatplus/auth": "^0.8"
+        "laravel-notification-channels/telegram": "^0.5.1",
+        "seatplus/notifications": "*",
+        "socialiteproviders/telegram": "^4.1.2"
     },
     "require-dev": {
         "brianium/paratest": "^6.2",
         "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
-        "phpunit/phpunit": "^9.3",
-        "spatie/phpunit-watcher": "^1.11"
+        "pestphp/pest": "^1.11",
+        "pestphp/pest-plugin-laravel": "^1.1",
+        "pestphp/pest-plugin-watch": "1.x-dev",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Seatplus\\TelegramChannel\\": "src",
+            "Seatplus\\TelegramChannel\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Seatplus\\TelegramChannel\\Tests\\": "tests"
         }
     },
     "scripts": {
-        "test": "./vendor/bin/testbench package:test --parallel --no-coverage",
-        "watch": "vendor/bin/phpunit-watcher watch",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+      "test": "./vendor/bin/pest",
+      "watch": "vendor/bin/pest --watch",
+      "test-coverage": "XDEBUG_MODE=coverage ./vendor/bin/pest --coverage"
     },
     "config": {
         "sort-packages": true
@@ -50,7 +59,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Seatplus\\TelegramChannel\\TelegramChannelServiceProvider"
             ]
         }
     },
