get ready for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
     "name": "seatplus/telegram-channel",
-    "description": ":package_description",
+    "description": "implements notifications for telegram",
     "keywords": [
-        ":vendor_name",
-        "laravel",
-        "package_slug"
+        "seatplus",
+        "telegram-channel"
     ],
     "homepage": "https://github.com/seatplus/telegram-channel",
     "license": "MIT",
